# ros2

./: CMakeLists.txt  README.md
BAU/: README.md
BAU/bau_stm32f407vgt6/: .mxproject  bau_stm32f407vgt6.ioc
BAU/bau_stm32f407vgt6/Core/Inc/: FreeRTOSConfig.h  libsnp_app.h  lis302dl.h  mpu6050.h  stm32f4_discovery_lis302dl.h  stm32f4xx_it.h
BAU/bau_stm32f407vgt6/Core/Src/: libmotor_app.c  libsnp_app.c  lis302dl.c  main.c  mpu6050.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
BAU/bau_stm32f407vgt6/MDK-ARM/: bau_stm32f407vgt6.uvoptx  bau_stm32f407vgt6.uvprojx  startup_stm32f407xx.lst
BAU/car_ctrl/: 小车参数.txt  调试笔记.docx
BAU/car_ctrl/app/Odometry/: odometry.c  odometry.h  odometry.h~RF254635a.TMP
BAU/car_ctrl/app/PID/: PID.C
BAU/car_ctrl/app/inc/: cli_uart.h  defs.h  libsnp_app.h  node_motor.h  node_recv_app.h
BAU/car_ctrl/app/src/: app_init.c  callback.c  cli_uart.c  libmotor_app.c  libsnp_app.c  node_motor.c  node_recv_app.c
BAU/car_ctrl/car_ctrl_F407/: .mxproject  car_ctrl_F407.ioc  mx.scratch
BAU/car_ctrl/car_ctrl_F407/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
BAU/car_ctrl/car_ctrl_F407/MDK-ARM/: car_ctrl_F407.uvguix.79008  car_ctrl_F407.uvguix.Administrator  car_ctrl_F407.uvoptx  car_ctrl_F407.uvprojx  startup_stm32f407xx.lst  startup_stm32f407xx.s
BAU/car_ctrl/car_ctrl_F407/Src/: freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
BAU/stm32f4-discovery/stm32f4discovery_bom/: MB997-BOM.xls
common/: CMakeLists.txt
common/cJSON/: CMakeLists.txt
common/include/: SerialPort.h  common_defs.h
common/libsnp/: CMakeLists.txt
common/libsnp/include/: snp.h  snp_buffer.h  snp_buffer_link.h  snp_defs.h  snp_link.h  snp_msgs.h  snp_node.h  snp_shell.h  snp_std_msgs.h  snp_timer.h
common/libsnp/platform/: CMakeLists.txt  libevent_tcp_link.c
common/libsnp/platform/include/: libevent_tcp_link.h
common/libsnp/src/: snp.c  snp_buffer.c  snp_buffer_link.c  snp_internal.c  snp_link.c  snp_msgs.c  snp_node.c  snp_parse.c  snp_shell.c  snp_std_process.c  snp_timer.c
common/libsnp/src/include/: snp_buffer.h  snp_defs_p.h  snp_internal.h  snp_node_internal.h  snp_parse.h  snp_std_process.h
common/libsnp/test/: snp_shell_client.c  snp_test_main.c
common/libssnp/: CMakeLists.txt  README.md
common/libssnp/include/: .ssnp.h.swp  .ssnp_msgs.h.swp  ssnp.h  ssnp_buffer.h  ssnp_msgs.h  ssnp_msgs_def.h  ssnp_shell.h
common/libssnp/src/: .ssnp.c.swp  .ssnp_buffer.c.swp  ssnp.c  ssnp_buffer.c  ssnp_msgs.c  ssnp_shell.c
common/libssnp/src/include/: ssnp_defs_p.h
common/src/: SerialPort.cc
common/wtb_protocol/: CMakeLists.txt  wtb_protocol.c  wtb_protocol.h
device/: CMakeLists.txt  README.md
device/counter/include/: counter.h  counter_defs.h
device/counter/src/: counter.c
device/counter/src/include/: counter_internal.h
device/counter/test/: counter_test.c
device/include/: device_defs.h
device/lidar/: CMakeLists.txt  README.md  lidar.cmake
device/lidar/wheeltec-N10/: N10_test_main.cc  wheeltec_n10_protocol.c
device/lidar/wheeltec-N10/include/: wheeltec_n10_protocol.h
device/motor/: CMakeLists.txt
device/motor/PID/: motor_pid.c  motor_pid.h
device/motor/include/: motor.h  motor_defs.h  motor_encoder.h
device/motor/src/: motor.c  motor_encoder.c
device/motor/src/include/: motor_internal.h
device/motor/test/: motor_test.c
libs/include/lidar/wheeltec-N10/: wheeltec_n10_protocol.h
libs/lib/: libevent-2.1.so.7.0.1
opensource/: CMakeLists.txt
opensource/libevent/: CMakeLists.txt
opensource/libevent/unix/lib/: libevent_core-2.1.so.7.0.1  libevent_extra-2.1.so.7.0.1  libevent_openssl-2.1.so.7.0.1  libevent_pthreads-2.1.so.7.0.1
ros2_pkgs/: RADME.md  colcon.sh
ros2_pkgs/.cache/clangd/index/: bau_ctrl.cpp.6D2A80F9C2C1D1DD.idx  bau_dev.cc.AA4AAD3838C4209E.idx  bau_dev.h.40E4924BAF0B4830.idx  input.cc.4AF2B690793F877E.idx  input.h.0B85BB4F7647CF73.idx  lidar_dev.cc.492A64212C2A009A.idx  lidar_dev.h.9A0162B492F69B48.idx  lidar_reader.cpp.DAD7F4524797E8DC.idx  lsiosr.cpp.76C456F886E75C34.idx  lsiosr.h.4DA6437B834AAE5D.idx  lslidar_driver.cc.DF19C924AFE84DC7.idx  lslidar_driver.h.2588CC4699AF99EA.idx  lslidar_driver_node.cc.56A8EB529399F137.idx  (+11 more)
ros2_pkgs/install/: local_setup.sh  setup.sh
ros2_pkgs/log/: latest_build
ros2_pkgs/src/SysDispatcher/: CMakeLists.txt  package.xml
ros2_pkgs/src/bau_ctrl/: CMakeLists.txt  package.xml
ros2_pkgs/src/bau_ctrl/include/: .bau_dev.h.swp  bau_dev.h
ros2_pkgs/src/bau_ctrl/launch/: .bau_ctrl_launch.py.swp  bau_ctrl_launch.py  test_launch.py
ros2_pkgs/src/bau_ctrl/src/: .bau_ctrl.cpp.swp  .bau_dev.cc.swp  bau_ctrl.cpp  bau_dev.cc
ros2_pkgs/src/car_uart_node/: CMakeLists.txt  package.xml
ros2_pkgs/src/lidar_reader/: CMakeLists.txt  package.xml
ros2_pkgs/src/n10_sdk/: wheeltec_lidar.launch.py
ros2_pkgs/src/sys_dispatcher/: CMakeLists.txt  package.xml
ros2_pkgs/src/win_tool_bridge/: CMakeLists.txt  package.xml
tools/: README.md
tools/build-device_tools-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
tools/build-device_tools-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
tools/build-device_tools-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  moc_n10lidarbridgewidget.cpp
tools/device_tools/: CMakeLists.txt  device_tools.pro  main.cpp  mainwindow.cpp  mainwindow.h  n10lidarbridgewidget.cpp  n10lidarbridgewidget.h
tools/snp_client/: mainwindow.cpp  mainwindow.h  nodeselector.cpp  nodeselector.h  qtserialportlink.cpp  qtserialportlink.h  qttcplink.cpp  qttcplink.h  snp_client.pro  snpshellwidget.cpp  snpshellwidget.h
(+639 files in other folders)
